macros/tests/ui/wrong_return.rs
#[macros::main]
const fn kernel_main() -> i32 {
    0
}

fn main() {}
